--- a/www/index.html
+++ b/www/index.html
@@ -62,7 +62,9 @@
     <script src="app/shared/services/transformer-service.js"></script>    
     <script src="app/shared/services/stripe-service.js"></script>    
     <script src="app/shared/services/firebase-service.js"></script>    
-    <script src="app/shared/services/validators/address-validator-service.js"></script><script src="app/shared/services/utilities/schedule-processor-service.js"></script> 
+    <script src="app/shared/services/validators/address-validator-service.js"></script>
+    <script src="app/shared/services/validators/settings-validator-service.js"></script>
+    <script src="app/shared/services/utilities/schedule-processor-service.js"></script> 
 
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
