--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -2,6 +2,7 @@
   <ion-content on-swipe-up="vm.toProductDetails()">
 		<ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeProductIndex">
 		  <ion-slide ng-repeat="product in vm.products" style="height:100%">
+		  	<div id="top-shader"></div>
 		  	<div class="product-desc-container">
 			    <div class="big-header">{{product.name}}</div>
 			  	<div class="small-header">{{product.hashtags}}</div>
@@ -15,7 +16,7 @@
 				  	</div>
 				 <div id="appt-address">{{product.appointment.address.street}}</div>
 		  	</div>
-
+		  	<div id="bottom-shader"></div>
 		  	<div class="price-deadline-container" ng-show="!product.appointment">
 				<div class="price-container">
 			  		<div class="dollar-sign">$</div>
