add privacy policy and terms of use links and add in app browser cordova lib

--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -45,8 +45,8 @@
       </a>  
   </div>
   <div id="policies-container">
-      <div id="privacy-policy" ng-click="vm.openPolicy('privacy')">Privacy Policy</div>
-      <div id="cancellation-policy" ng-click="vm.openPolicy('cancellation')">Cancellation Policy</div>
+      <div id="privacy-policy" ng-click="vm.openBrowser('http://www.rarenails.co/privacy-policy')">Privacy Policy</div>
+      <div id="cancellation-policy" ng-click="vm.openBrowser('http://www.rarenails.co/terms-of-use')">Terms of Use</div>
   </div>
   </ion-content>
   <div class="settings-footer" ng-click="vm.toContactUs()">
