add phone number & email

--- a/www/app/contactUs/contact-us.html
+++ b/www/app/contactUs/contact-us.html
@@ -11,7 +11,7 @@
 			<div class="complete-modal-title">Your satisfaction is our priority</div>
 			<div class="complete-modal-description">We love to get your feedback. Please feel free to contact us via phone or email</div>
 		</div>
-		<a id="call-btn" class="primary-button" href="tel: 110">Call</a>
+		<a id="call-btn" class="primary-button" href="tel: 4156623856">Call</a>
 		<button id="email-btn" class="primary-button" ng-click="vm.email()">Email</button>
 	</ion-content>
 </ion-view>
