--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -27,7 +27,7 @@
 		  	</div>
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
-		  <div class="static-footer product-button">
+		  <div class="static-footer action-button">
 		  	<button id="products-booking-btn" ng-show="!product.appointment" class="primary-button" ng-click="vm.bookAppointment()">Book</button>
 		  </div>
 		</ion-slide-box>
