--- a/www/app/bookings/modals/edit-address-modal.html
+++ b/www/app/bookings/modals/edit-address-modal.html
@@ -1,5 +1,5 @@
 <div class="edit-address-container" ng-click="$event.stopPropagation()" ng-show="!vm.showBookingContainer">
-	<div id="add-address-title">Add your address</div>
+	<div id="add-address-title" class="booking-sub-header">Add your address</div>
     <input class="user-text-input" required placeholder="Street Address" type="text" ng-model="vm.selectedAddress.street"/>        
     <input class="user-text-input" required placeholder="City" type="text" ng-model="vm.selectedAddress.city"/>
 	<div class="state-zip-container">
@@ -7,5 +7,7 @@
 		<input class="edit-zipcode" required placeholder="ZIP" ng-model="vm.selectedAddress.zipCode" type="text"/>
 	</div>
 	<div class="validation-msg" ng-show="!isAddressValid">**Please enter appropriate values</div>
-	<button id="confirm-address-btn" class="primary-button" ng-click="editAddressModal.done()">Confirm Address</button>
+	<div class="action-button no-padding">
+		<button id="confirm-address-btn" class="primary-button" ng-click="editAddressModal.done()">Confirm Address</button>
+	</div>
 </div>
