--- a/www/index.html
+++ b/www/index.html
@@ -64,6 +64,7 @@
     <script src="app/shared/services/firebase-service.js"></script>    
     <script src="app/shared/services/validators/address-validator-service.js"></script>
     <script src="app/shared/services/validators/settings-validator-service.js"></script>
+    <script src="app/shared/services/validators/phone-validator-service.js"></script>
     <script src="app/shared/services/utilities/schedule-processor-service.js"></script> 
 
     <!-- models -->
