Updating forms inside of modals.

--- a/www/app/complete/modals/name-number-modal.html
+++ b/www/app/complete/modals/name-number-modal.html
@@ -1,9 +1,13 @@
 <div class="complete-page-modal">
 	<div class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
-	<div class="complete-modal-title">Payment Processing</div>
-	<div class="complete-modal-description">Before you go, we need to get your name and phone number so we can contact you for your appointment</div>
-    <input class="name-number-input user-text-input" placeholder="First and Last Name" type="text" ng-model="vm.user.name"/>        
-    <input class="name-number-input user-text-input" type="number" pattern="\d*" placeholder="Phone Number" type="text" ng-model="vm.user.phoneNumber"/>
-    <div id="name-number-validation-msg" class="validation-msg" ng-show="!validNamePhoneNumber">**Please enter appropriate values</div>
-    <button class="primary-button" ng-click="nameNumberModal.done()">Done</button>
+	<div class="content">
+		<div class="complete-modal-title">Payment Processing</div>
+		<div class="complete-modal-description">Before you go, we need to get your name and phone number so we can contact you for your appointment</div>
+	    <input class="name-number-input user-text-input form-input" placeholder="First and Last Name" type="text" ng-model="vm.user.name"/>        
+	    <input class="name-number-input user-text-input form-input" type="number" pattern="\d*" placeholder="Phone Number" type="text" ng-model="vm.user.phoneNumber"/>
+	    <div id="name-number-validation-msg" class="validation-msg" ng-show="!validNamePhoneNumber">**Please enter appropriate values</div>
+	    <div class="action-button no-padding">
+	    	<button class="primary-button" ng-click="nameNumberModal.done()">Done</button>
+	    </div>
+	</div>
 </div>
