--- a/www/app/bookings/bookings.html
+++ b/www/app/bookings/bookings.html
@@ -1,47 +1,52 @@
 <ion-view view-title="Bookings" ng-controller="BookingsCtrl as vm">
   <ion-content>
-    <div class="product-desc-container" ng-click="vm.goBack()">
-	    <div class="big-header">{{vm.product.name}}</div>
-	  	<div class="small-header">{{vm.product.hashtags}}</div>
-	  	<div class="product-description">{{vm.product.description}}</div>
+  	<div class="blur-fullscreen">
+		<div id="top-shader"></div>
+  		<div id="bottom-shader"></div>
+	    <div class="product-desc-container" ng-click="vm.goBack()">
+		    <div class="big-header">{{vm.product.name}}</div>
+		  	<div class="small-header">{{vm.product.hashtags}}</div>
+		  	<div class="product-description">{{vm.product.description}}</div>
+	  	</div>
   	</div>
   	<div class="fullscreen-image" ng-click="vm.goBack()" ng-style="{'background-image':'url({{vm.product.image}})'}">
-  	<div class="booking-container" ng-click="$event.stopPropagation()" ng-show="vm.showBookingContainer">
-  		<div class="date-container" style="opacity:1">
-  			<div class="booking-sub-header">Pick a date</div>
-	  		<ion-scroll direction="x" class="wide-as-needed date-time-selector" >
-				<button ng-repeat="date in vm.schedule" ng-class="{active: date.$id === vm.selectedDate}" ng-click="vm.selectDate(date)" ng-disabled="!date.available">
-					<div id="day-of-week">{{date.dayOfWeek}}</div>
-					<div id="month-day">{{date.monthDay}}</div>
+	  	<div class="booking-container" ng-click="$event.stopPropagation()" ng-show="vm.showBookingContainer">
+	  		<div class="date-container" style="opacity:1">
+	  			<div class="booking-sub-header">Pick a date</div>
+		  		<ion-scroll direction="x" class="wide-as-needed date-time-selector" >
+					<button ng-repeat="date in vm.schedule" ng-class="{active: date.$id === vm.selectedDate}" ng-click="vm.selectDate(date)" ng-disabled="!date.available">
+						<div class="day-of-week">{{date.dayOfWeek}}</div>
+						<div class="month-day">{{date.monthDay}}</div>
+					</button>	
+			    </ion-scroll>
+			    <div class="booking-sub-header">Pick a time</div>
+			    <ion-scroll direction="x" class="wide-as-needed date-time-selector">
+					<button ng-repeat="time in vm.times" ng-class="{active: time.$id === vm.selectedTime.$id}" ng-click="vm.selectTime(time)" ng-disabled="!time.available">
+						<div class="time-of-day">{{time.$id}}</div>
+					</button>	
+			    </ion-scroll>
+	  		</div>
+	  		<hr class="horizontal-divider">
+	  		<div>
+	  			<div class="booking-sub-header">Pick a location</div>
+	  		</div>
+	  		<div class="address-selector">
+				<button id="address-btn-left" class="address-btn" ng-class="{active: vm.user.addresses.home === vm.selectedAddress}" ng-click="vm.selectAddress('home', vm.user.addresses.home)">
+					<div class="address-type">Home</div>
+					<div class="address-text" ng-show="vm.user.addresses.home.street">{{vm.user.addresses.home.street}}</div>
+					<div class="address-text-placeholder" ng-show="!vm.user.addresses.home.street">Add location</div>
 				</button>	
-		    </ion-scroll>
-		    <div class="booking-sub-header">Pick a time</div>
-		    <ion-scroll direction="x" class="wide-as-needed date-time-selector">
-				<button ng-repeat="time in vm.times" ng-class="{active: time.$id === vm.selectedTime.$id}" ng-click="vm.selectTime(time)" ng-disabled="!time.available">
-					<div id="time-of-day">{{time.$id}}</div>
+				<button id="address-btn-right" class="address-btn" ng-class="{active: vm.user.addresses.work === vm.selectedAddress}" ng-click="vm.selectAddress('work', vm.user.addresses.work)">
+					<div class="address-type">Work</div>
+					<div class="address-text" ng-show="vm.user.addresses.work.street">{{vm.user.addresses.work.street}}</div>
+					<div class="address-text-placeholder" ng-show="!vm.user.addresses.work.street">Add location</div>
 				</button>	
-		    </ion-scroll>
-  		</div>
-  		<hr class="horizontal-divider">
-  		<div>
-  			<div class="booking-sub-header">Pick a location</div>
-  		</div>
-  		<div class="address-selector">
-			<button id="address-btn-left" class="address-btn" ng-class="{active: vm.user.addresses.home === vm.selectedAddress}" ng-click="vm.selectAddress('home', vm.user.addresses.home)">
-				<div class="address-type">Home</div>
-				<div class="address-text" ng-show="vm.user.addresses.home.street">{{vm.user.addresses.home.street}}</div>
-				<div class="address-text-placeholder" ng-show="!vm.user.addresses.home.street">Add location</div>
-			</button>	
-			<button id="address-btn-right" class="address-btn" ng-class="{active: vm.user.addresses.work === vm.selectedAddress}" ng-click="vm.selectAddress('work', vm.user.addresses.work)">
-				<div class="address-type">Work</div>
-				<div class="address-text" ng-show="vm.user.addresses.work.street">{{vm.user.addresses.work.street}}</div>
-				<div class="address-text-placeholder" ng-show="!vm.user.addresses.work.street">Add location</div>
-			</button>	
-  		</div>
-  		<div class="action-button">
-  			<button id="booking-confirm-btn" class="primary-button" ng-disabled="!(vm.selectedDate && vm.selectedTime.$id && vm.selectedAddress.street)" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
-  		</div>
-    </div>
+	  		</div>
+	  		<div class="action-button">
+	  			<button id="booking-confirm-btn" class="primary-button" ng-disabled="!(vm.selectedDate && vm.selectedTime.$id && vm.selectedAddress.street)" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
+	  		</div>
+	    </div>
+	</div>
     <div ng-click="$event.stopPropagation()">
     	<button class="nav-settings-btn" ng-click="vm.toSettings()"></button>
     </div>
