check in phone number formatting

--- a/www/index.html
+++ b/www/index.html
@@ -66,6 +66,7 @@
     <script src="app/shared/services/validators/settings-validator-service.js"></script>
     <script src="app/shared/services/validators/phone-validator-service.js"></script>
     <script src="app/shared/services/utilities/schedule-processor-service.js"></script> 
+    <script src="app/shared/services/utilities/formatter-service.js"></script> 
 
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
