moving to directives

--- a/www/index.html
+++ b/www/index.html
@@ -36,6 +36,8 @@
 
     <!-- products -->
     <script src="app/products/products-ctrl.js"></script>
+    <script src="app/products/directives/apptInfo/apptInfo.js"></script>    
+    <script src="app/products/directives/priceDeadline/priceDeadline.js"></script> 
 
     <!-- product deatils -->
     <script src="app/productDetails/product-details-ctrl.js"></script>
@@ -54,7 +56,6 @@
 
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
-    <script src="app/shared/policies.js"></script>
 
     <!-- services -->
     <script src="app/shared/services/user-selection-service.js"></script>    
