--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -18,15 +18,7 @@
 				 <div id="appt-address">{{product.appointment.address.street}}</div>
 		  	</div> -->
 		  	<div id="bottom-shader"></div>
-		  	<price-deadline product="product"></price-deadline>
-<!-- 		  	<div class="price-deadline-container" ng-show="!product.appointment">
-				<div class="price-container">
-			  		<div class="dollar-sign">$</div>
-					<div class="product-price">{{product.price}}</div>
-			  	</div>
-				<div class="deadline-msg">last chance to book this style {{product.deadlineText}}!</div>
-				<button class="arrow-btn ion-ios-arrow-down" ng-click="vm.toProductDetails()"></button>
-		  	</div> -->
+		  	<price-deadline product="product" nav-function="vm.toProductDetails()"></price-deadline>
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
 		  <div class="static-footer action-button">
