--- a/www/app/products/directives/apptInfo/appt-info-template.html
+++ b/www/app/products/directives/apptInfo/appt-info-template.html
@@ -2,7 +2,7 @@
 	<div id="appt-schedule-container">
 			<div id="appt-schedule-icon" class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
 	  		<div id="scheduled-for-msg">You are scheduled for</div>
-			<div id="appt-date-time">{{dateTime.date}} at {{dateTime.time}}</div>
+			<div id="appt-date-time">{{product.dateTime.date}} at {{product.dateTime.time}}</div>
 	  	</div>
-	 <div id="appt-address">{{appointment.address.street}}</div>
+	 <div id="appt-address">{{product.appointment.address.street}}</div>
 </div>	
