--- a/www/app/complete/modals/name-number-modal.html
+++ b/www/app/complete/modals/name-number-modal.html
@@ -1,6 +1,6 @@
-<div class="complete-page-modal">
+<div class="complete-page-modal rare-modal">
 	<div class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
-	<div class="content">
+	<div class="rare-modal-content">
 		<div class="complete-modal-title">Payment Processing</div>
 		<div class="complete-modal-description">Before you go, we need to get your name and phone number so we can contact you for your appointment</div>
 	    <input class="name-number-input user-text-input form-input" placeholder="First and Last Name" type="text" ng-model="vm.user.name"/>        
