--- a/www/app/contactUs/contact-us.html
+++ b/www/app/contactUs/contact-us.html
@@ -7,7 +7,7 @@
 <ion-content >
 	<div class="fullscreen-image blurry" ng-style="{'background-image':'url({{vm.product.image}})'}"></div>
 		<div id="contact-us-modal" class="rare-modal">
-			<div class="status-icon-circle" style="background-image:url('../img/icon_contact_us@3x.png')"></div>
+			<div class="status-icon-circle" style="background-image:url('img/icon_contact_us@3x.png')"></div>
 			<div class="rare-modal-content">
 				<div class="rare-modal-title">Your satisfaction is our priority</div>
 				<div class="rare-modal-description">We love to get your feedback. Please feel free to contact us via phone or email</div>
