san francisco address msg in edit address modals/dialogs, include only numeric for phone validation, contact us link in edit address modal

--- a/www/app/products/directives/apptInfo/appt-info-template.html
+++ b/www/app/products/directives/apptInfo/appt-info-template.html
@@ -1,6 +1,6 @@
 <div id="appt-info-container">
 	<div id="appt-schedule-container">
-			<div id="appt-schedule-icon" class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
+			<div id="appt-schedule-icon" class="status-icon-circle" style="background-image:url('img/icon_check@3x.png')"></div>
 	  		<div id="scheduled-for-msg">You are scheduled for</div>
 			<div id="appt-date-time">{{product.dateTime.date}} at {{product.dateTime.time}}</div>
 	  	</div>
