--- a/www/app/bookings/modals/edit-address-modal.html
+++ b/www/app/bookings/modals/edit-address-modal.html
@@ -1,12 +1,13 @@
 <div class="edit-address-container" ng-click="$event.stopPropagation()" ng-show="!vm.showBookingContainer">
 	<div id="add-address-title" class="booking-sub-header">Add your address</div>
+    <div class="">Currently serving select neighborhoods in San Francisco</div>
     <input class="user-text-input form-input" required placeholder="Street Address" type="text" ng-model="vm.selectedAddress.street"/>        
-    <input class="user-text-input form-input" required placeholder="City" type="text" ng-model="vm.selectedAddress.city"/>
+    <input class="user-text-input form-input" type="text" disabled="true" placeholder="{{vm.selectedAddress.city}}"/>
 	<div class="state-zip-container">
-		<input class="edit-state form-input" required placeholder="State" ng-model="vm.selectedAddress.state" type="text"/>
+		<input class="edit-state form-input" disabled="true" placeholder="{{vm.selectedAddress.state}}" type="text"/>
 		<input class="edit-zipcode form-input" required placeholder="ZIP" ng-model="vm.selectedAddress.zipCode" type="text"/>
 	</div>
-	<div class="validation-msg" ng-show="!isAddressValid">**This address is out of our service area. Contact us to learn more</div>
+	<div class="validation-msg" ng-show="!isAddressValid">**This address is out of our service area. <a class="anchor-text-underline" ng-click="toContactUs()">Contact us</a> to learn more</div>
 	<div class="action-button no-padding">
 		<button id="confirm-address-btn" class="primary-button" ng-click="editAddressModal.done()">Confirm Address</button>
 	</div>
