--- a/www/app/complete/modals/confirm-phone-modal.html
+++ b/www/app/complete/modals/confirm-phone-modal.html
@@ -1,6 +1,6 @@
 <div id="confirm-phone-modal" class="complete-page-modal">
-	<div class="status-icon-circle" ng-show="!confirmPhoneModal.wrongCode " style="background-image:url('../img/icon_check@3x.png')"></div>
-	<div class="status-icon-circle" ng-show="confirmPhoneModal.wrongCode " style="background-image:url('../img/icon_error@3x.png')"></div>
+	<div class="status-icon-circle" ng-show="!confirmPhoneModal.wrongCode " style="background-image:url('img/icon_check@3x.png')"></div>
+	<div class="status-icon-circle" ng-show="confirmPhoneModal.wrongCode " style="background-image:url('img/icon_error@3x.png')"></div>
 	<div class="content">
 		<div class="complete-modal-title">{{confirmPhoneModal.wrongCode ? "Oops, wrong code" : "Confirm Phone Number"}}</div>
 		<div class="complete-modal-description">{{confirmPhoneModal.wrongCode ? "The code that was entered did not match the one we sent. Please try again." : "In a moment, you will receive a confirmation code. Please enter it below to confirm your phone number."}}</div>
