use absolute path for appt confirm modal

--- a/www/app/complete/modals/appt-confirmed-modal.html
+++ b/www/app/complete/modals/appt-confirmed-modal.html
@@ -1,5 +1,5 @@
 <div id="appt-confirmed-modal" class="complete-page-modal rare-modal">
-	<div class="status-icon-circle" style="background-image:url('../img/icon_check@3x.png')"></div>
+	<div class="status-icon-circle" style="background-image:url('img/icon_check@3x.png')"></div>
 	<div class="rare-modal-content">
 		<div class="complete-modal-title">Thank You So Much!</div>
 		<div class="complete-modal-description">Your appointment is confirmed. If you need to make changes or have questions, contact us.</div>
