Massive button refactor, need to fix settings page controller to use new button style names.

--- a/www/app/bookings/modals/edit-address-modal.html
+++ b/www/app/bookings/modals/edit-address-modal.html
@@ -1,6 +1,6 @@
 <div class="edit-address-container" ng-click="$event.stopPropagation()" ng-show="!vm.showBookingContainer">
 	<div id="add-address-title" class="booking-sub-header">Add your address</div>
-    <div class="">Currently serving select neighborhoods in San Francisco</div>
+    <div class="sub-header-description">Currently serving select neighborhoods in San Francisco</div>
     <input class="user-text-input form-input" required placeholder="Street Address" type="text" ng-model="vm.selectedAddress.street"/>        
     <input class="user-text-input form-input" type="text" disabled="true" placeholder="{{vm.selectedAddress.city}}"/>
 	<div class="state-zip-container">
@@ -8,7 +8,7 @@
 		<input class="edit-zipcode form-input" required placeholder="ZIP" ng-model="vm.selectedAddress.zipCode" type="text"/>
 	</div>
 	<div class="validation-msg" ng-show="!isAddressValid">**This address is out of our service area. <a class="anchor-text-underline" ng-click="toContactUs()">Contact us</a> to learn more</div>
-	<div class="action-button no-padding">
-		<button id="confirm-address-btn" class="primary-button" ng-click="editAddressModal.done()">Confirm Address</button>
+	<div class="btn-container no-padding">
+		<button id="confirm-address-btn" class="btn primary-btn" ng-click="editAddressModal.done()">Confirm Address</button>
 	</div>
 </div>
