--- a/www/app/complete/modals/appt-confirmed-modal.html
+++ b/www/app/complete/modals/appt-confirmed-modal.html
@@ -3,9 +3,9 @@
 	<div class="rare-modal-content">
 		<div class="complete-modal-title">Thank You So Much!</div>
 		<div class="complete-modal-description">Your appointment is confirmed. If you need to make changes or have questions, contact us.</div>
-		<div class="popup-vertical-buttons">
-	    	<button id="appt-confirm-contact-us-btn" class="primary-button" ng-click="apptConfirmedModal.contactUs()">Contact Us</button>
-	    	<button id="close-appt-btn" class="dismiss-button" ng-click="apptConfirmedModal.close()">Close</button>
+		<div class="btn-container no-padding">
+	    	<button id="appt-confirm-contact-us-btn" class="btn primary-btn" ng-click="apptConfirmedModal.contactUs()">Contact Us</button>
+	    	<button id="close-appt-btn" class="btn dismiss-btn" ng-click="apptConfirmedModal.close()">Close</button>
 		</div>
 	</div>
 </div>
