--- a/www/app/contactUs/contact-us.html
+++ b/www/app/contactUs/contact-us.html
@@ -14,9 +14,9 @@
 			</div>
 		</div>
 		<div class="static-footer">
-			<div class="action-button">
-				<a class="primary-button" id="call-btn" class="primary-button" href="tel: 4156623856">Call</a>
-				<button id="email-btn" class="primary-button" ng-click="vm.email()">Email</button>
+			<div class="btn-container">
+				<a id="call-btn" class="btn primary-btn" href="tel: 4156623856">Call</a>
+				<button id="email-btn" class="btn info-btn" ng-click="vm.email()">Email</button>
 			</div>
 		</div>
 </ion-content>
