--- a/www/app/bookings/bookings.html
+++ b/www/app/bookings/bookings.html
@@ -42,8 +42,8 @@
 					<div class="address-text-placeholder" ng-show="!vm.user.addresses.work.street">Add location</div>
 				</button>	
 	  		</div>
-	  		<div class="action-button">
-	  			<button id="booking-confirm-btn" class="primary-button" ng-disabled="!(vm.selectedDate && vm.selectedTime.$id && vm.selectedAddress.street)" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
+	  		<div class="btn-container">
+	  			<button id="booking-confirm-btn" class="btn primary-btn" ng-disabled="!(vm.selectedDate && vm.selectedTime.$id && vm.selectedAddress.street)" ng-click="vm.bookAppointment()">Confirm for ${{vm.product.price}}</button>
 	  		</div>
 	    </div>
 	</div>
