--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -13,9 +13,9 @@
 		  	<price-deadline product="product" nav-function="vm.toProductDetails()" ng-hide="product.appointment"></price-deadline>
 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
 		  </ion-slide>
-		  <div class="static-footer action-button">
-		  	<button ng-show="!product.appointment" class="primary-button" ng-click="vm.bookAppointment()">Book</button>
-		  	<button ng-show="product.appointment" class="info-button" ng-click="vm.contactUs()">Booked</button>
+		  <div class="static-footer btn-container">
+		  	<button ng-show="!product.appointment" class="btn primary-btn" ng-click="vm.bookAppointment()">Book</button>
+		  	<button ng-show="product.appointment" class="btn info-btn" ng-click="vm.contactUs()">Booked</button>
 		  </div>
 		</ion-slide-box>
 		<button class="nav-settings-btn" ng-click="vm.toSettings()"></button>
