--- a/www/app/complete/modals/reminder-modal.html
+++ b/www/app/complete/modals/reminder-modal.html
@@ -1,7 +1,11 @@
-<div id="reminder-modal" class="complete-page-modal">
+<div id="reminder-modal" class="complete-page-modal rare-modal">
 	<div class="status-icon-circle" style="background-image:url('../img/icon_reminder@3x.png')"></div>
-	<div class="complete-modal-title">Reminder</div>
-	<div class="complete-modal-description">Would you like us to send you a reminder for your appointment?</div>
-    <button class="primary-button" ng-click="reminderModal.done()">Remind Me</button>
-    <button id="no-reminder-btn" class="primary-button" ng-click="reminderModal.done()">No Thank You</button>
+	<div class="rare-modal-content">
+		<div class="complete-modal-title">Reminder</div>
+		<div class="complete-modal-description">Would you like us to send you a reminder for your appointment?</div>
+		<div class="btn-container no-padding">
+		    <button class="btn primary-btn" ng-click="reminderModal.done()">Remind Me</button>
+		    <button id="no-reminder-btn" class="btn dismiss-btn" ng-click="reminderModal.done()">No Thank You</button>
+		</div>
+	</div>
 </div>
