fix phone number appending problem in settings page

--- a/www/app/settings/settings.html
+++ b/www/app/settings/settings.html
@@ -40,7 +40,7 @@
       </a>  
       <div class="item item-divider settings-label">Phone</div>
       <a class="item" ng-click="vm.editPhoneNumber()">
-        <div class="email-phone-text">{{vm.user.phoneNumber}}</div>
+        <div class="email-phone-text">&zwnj;&zwnj;&zwnj;&zwnj;{{vm.user.phoneNumber}}</div>
         <div class="settings-right-btn-email-phone"></div>              
       </a>  
   </div>
