--- a/www/app/products/directives/priceDeadline/price-deadline-template.html
+++ b/www/app/products/directives/priceDeadline/price-deadline-template.html
@@ -3,6 +3,6 @@
 	  		<div class="dollar-sign">$</div>
 			<div class="product-price">{{product.price}}</div>
 	  	</div>
-		<div class="deadline-msg">last chance to book this style {{product.deadlineText}}!</div>
+		<div class="deadline-msg" ng-show="!product.isDeadlineUp">last chance to book this style {{product.deadlineText}}!</div>
 		<button class="arrow-btn ion-ios-arrow-down" ng-click="onDownArrowClick()"></button>
   	</div>
