resolve strange bug with appending phone numbers in phone confirmation modal

--- a/www/app/complete/modals/confirm-phone-modal.html
+++ b/www/app/complete/modals/confirm-phone-modal.html
@@ -5,7 +5,7 @@
 		<div class="complete-modal-title">{{confirmPhoneModal.wrongCode ? "Oops, wrong code" : "Confirm Phone Number"}}</div>
 		<div class="complete-modal-description">{{confirmPhoneModal.wrongCode ? "The code that was entered did not match the one we sent. Please try again." : "In a moment, you will receive a confirmation code. Please enter it below to confirm your phone number."}}</div>
 		<input id="security-code-input" class="form-input" type="number" pattern="\d*" ng-model="confirmPhoneModal.securityCode"></input>
-		<div id="confirm-phone-sent-to">Sent to {{vm.user.phoneNumber}}</div>
+		<div id="confirm-phone-sent-to">Sent to {{vm.user.phoneNumber}}&zwnj;&zwnj;&zwnj;&zwnj;</div>
 	    <div class="resend-code-link" ng-click="confirmPhoneModal.resend()">I didn't get it, try again</div>
 	    <div class="btn-container no-padding">
 	    	<button class="btn primary-btn" ng-click="confirmPhoneModal.confirm()">Confirm</button>
