Fixing issues with button on product details

--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -22,7 +22,7 @@
     	</div>
     </div>
   </ion-content>
-  <div class="static-footer action-button">
-      <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  class="primary-button" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
+  <div class="static-footer btn-container">
+      <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  class="btn primary-btn" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
   </div>
 </ion-view>
