use ngClass on instagram page book button

--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -23,6 +23,6 @@
     </div>
   </ion-content>
   <div class="static-footer btn-container">
-      <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  class="btn primary-btn" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
+      <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  ng-class="vm.product.appointment ? 'btn info-btn' : 'btn primary-btn'" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
   </div>
 </ion-view>
