--- a/www/app/productDetails/product-details.html
+++ b/www/app/productDetails/product-details.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Details" ng-controller="ProductDetailsCtrl as vm">
-    <div class="product-info-container">
-        <div class="product-text-container">
-            <div class="product-name big-header">{{vm.product.name}}</div>
-            <div class="product-hashtags small-header">{{vm.product.hashtags}}</div>
-        </div>
+  <div class="product-info-container">
+    <div class="product-text-container">
+      <div class="product-name big-header">{{vm.product.name}}</div>
+      <div class="product-hashtags small-header">{{vm.product.hashtags}}</div>
     </div>
-  <ion-content style="margin-bottom:80px; background-color: transparent;" on-swipe-down="vm.toProducts()">
+  </div>
+  <ion-content class="instagram-list" on-swipe-down="vm.toProducts()">
     <div class="instagram-container" ng-repeat="instagram in vm.instagrams">
     	<div class="image-container" ng-style="{'background-image':'url({{instagram.image}})'}">
             <div id="bottom-shader"></div>
@@ -23,7 +23,9 @@
     	</div>
     </div>
   </ion-content>
-  <div class="static-footer btn-container">
-      <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  ng-class="vm.product.appointment ? 'btn info-btn' : 'btn primary-btn'" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
-  </div>
+  <div class="static-footer">
+    <div class="btn-container">
+        <button id="product-details-confirm-btn" ng-disabled="vm.product.appointment"  ng-class="vm.product.appointment ? 'btn info-btn' : 'btn primary-btn'" ng-click="vm.bookAppointment()">{{vm.product.appointment ? "Booked" : "Book"}}</button>
+      </div>
+    </div>
 </ion-view>
