--- a/www/index.html
+++ b/www/index.html
@@ -33,7 +33,9 @@
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
     <!-- your app's js -->
     <script src="app/app.js"></script>
-
+    <!-- exception override -->
+    <script src="app/shared/modules/exceptionOverride/exception-override-module.js"></script>  
+    <script src="app/shared/modules/exceptionOverride/exception-handler-service.js"></script>  
     <!-- products -->
     <script src="app/products/products-ctrl.js"></script>
     <script src="app/products/directives/apptInfo/appt-info-directive.js"></script>    
