--- a/www/index.html
+++ b/www/index.html
@@ -69,6 +69,9 @@
     <script src="app/shared/services/utilities/schedule-processor-service.js"></script> 
     <script src="app/shared/services/utilities/formatter-service.js"></script> 
 
+    <!-- shared directives -->
+    <script src="app/shared/directives/productDescriptionContainer/product-desc-container-directive.js"></script> 
+
     <!-- models -->
     <script src="app/shared/models/User.js"></script>
     <script src="app/shared/models/Address.js"></script>
