use lazy loading library for product images

--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,7 @@
     <script src="https://checkout.stripe.com/checkout.js"></script>    
     <script src="lib/angular-twilio/angular-twilio.js"></script>
     <script src="lib/angular-twilio-verification/angular-twilio-verification.js"></script>
+    <script src="lib/angular-lazy-img/release/angular-lazy-img.min.js"></script>
 
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
