--- a/www/app/products/products.html
+++ b/www/app/products/products.html
@@ -1,14 +1,16 @@
 <ion-view view-title="Products" ng-controller="ProductsCtrl as vm">
   <ion-content on-swipe-up="vm.toProductDetails()">
-		<ion-slide-box on-slide-changed="slideHasChanged($index)" active-slide="activeProductIndex">
+		<ion-slide-box on-slide-changed="vm.slideHasChanged()" active-slide="activeProductIndex">
 		  <ion-slide ng-repeat="product in vm.products" style="height:100%">
 		  	<div id="top-shader"></div>
 		  	<product-desc-container product="product"></product-desc-container>
 		  	<appt-info appointments="vm.userAppointments" product="product" ng-show="product.appointment"></appt-info>
 		  	<div id="bottom-shader"></div>
 		  	<price-deadline product="product" nav-function="vm.toProductDetails()" ng-hide="product.appointment"></price-deadline>
-		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
-		  </ion-slide>
+		  	<div class="fullscreen-image" lazy-img="{{product.image}}">
+
+<!-- 		  	<div class="fullscreen-image" ng-style="{'background-image':'url({{product.image}})'}">
+ -->		  </ion-slide>
 		  <div class="static-footer btn-container">
 		  	<button ng-show="!product.appointment" class="btn primary-btn" ng-click="vm.bookAppointment()">Book</button>
 		  	<button ng-show="product.appointment" class="btn info-btn" ng-click="vm.contactUs()">Booked</button>
