change some file naming conventions

--- a/www/index.html
+++ b/www/index.html
@@ -40,20 +40,20 @@
     <script src="app/products/directives/apptInfo/appt-info-directive.js"></script>    
     <script src="app/products/directives/priceDeadline/price-deadline-directive.js"></script> 
 
-    <!-- product deatils -->
-    <script src="app/productDetails/product-details-ctrl.js"></script>
+    <!-- instagram -->
+    <script src="app/instagram/instagram.controller.js"></script>
 
     <!-- bookings -->
-    <script src="app/bookings/bookings-ctrl.js"></script>
+    <script src="app/bookings/bookings.controller.js"></script>
 
     <!-- complete -->
-    <script src="app/complete/complete-ctrl.js"></script>    
+    <script src="app/complete/complete.controller.js"></script>    
 
     <!-- contact us -->
-    <script src="app/contactUs/contact-us-ctrl.js"></script>    
+    <script src="app/contactUs/contact-us.controller.js"></script>    
 
     <!-- settings -->
-    <script src="app/settings/settings-ctrl.js"></script>    
+    <script src="app/settings/settings.controller.js"></script>    
 
     <!-- constants -->
     <script src="app/shared/constants.js"></script>
