change services name convention

--- a/www/index.html
+++ b/www/index.html
@@ -59,16 +59,16 @@
     <script src="app/shared/constants.js"></script>
 
     <!-- services -->
-    <script src="app/shared/services/user-selection-service.js"></script>    
-    <script src="app/shared/services/local-storage-service.js"></script>    
-    <script src="app/shared/services/transformer-service.js"></script>    
-    <script src="app/shared/services/stripe-service.js"></script>    
-    <script src="app/shared/services/firebase-service.js"></script>    
-    <script src="app/shared/services/validators/address-validator-service.js"></script>
-    <script src="app/shared/services/validators/settings-validator-service.js"></script>
-    <script src="app/shared/services/validators/phone-validator-service.js"></script>
-    <script src="app/shared/services/utilities/schedule-processor-service.js"></script> 
-    <script src="app/shared/services/utilities/formatter-service.js"></script> 
+    <script src="app/shared/services/user-selection.service.js"></script>    
+    <script src="app/shared/services/local-storage.service.js"></script>    
+    <script src="app/shared/services/transformer.service.js"></script>    
+    <script src="app/shared/services/stripe.service.js"></script>    
+    <script src="app/shared/services/firebase.service.js"></script>    
+    <script src="app/shared/services/validators/address-validator.service.js"></script>
+    <script src="app/shared/services/validators/settings-validator.service.js"></script>
+    <script src="app/shared/services/validators/phone-validator.service.js"></script>
+    <script src="app/shared/services/utilities/schedule-processor.service.js"></script> 
+    <script src="app/shared/services/utilities/formatter.service.js"></script> 
 
     <!-- shared directives -->
     <script src="app/shared/directives/productDescriptionContainer/product-desc-container-directive.js"></script> 
